# test-mcp-server

./: Taskfile.yml  pre-commit-config.yaml  pyproject.toml  server.py
src/mcp_server/: server.py
