[project]
name = "mcp-server"
version = "0.1.0"
description = "Test mcp server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.7.3",
    "pyright<2.0.0,>=1.1.388",
    "pre-commit<5.0.0,>=4.0.1",
]

[tool.uv]
default-groups = []

[tool.ruff]
line-length=100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN"]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
